refactor: About me - name "STEP IT Academy"

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p>Hi !</p>
                 <h1>I'm Maria Badanina. <br>
                 a Front-Ent Developer</h1>
-                <small>I am 24 years old, I am a novice programmer. I graduated from BSUIR. I used to practice music (violin) and sports (handball). I am currently taking a Front-end course at the STEP Computer Academy. I am interested in your course because I want to improve my programming and English skills and hope to gain some development experience.</small>
+                <small>I am 24 years old, I am a novice programmer. I graduated from BSUIR. I used to practice music (violin) and sports (handball). I am currently taking a Front-end course at the STEP IT Academy. I am interested in your course because I want to improve my programming and English skills and hope to gain some development experience.</small>
             </div>
             <div class="photo"></div>
         </section>
