--- a/index.html
+++ b/index.html
@@ -101,6 +101,58 @@
             </h2>
             <div>
                 <div class="project">
+                    <img src="images/Progects/TaskMaster.png" alt="Trello">
+                    <div>
+                        <div class="link-block">
+                            <a href="https://github.com/RiverBeaver/CourseWorkJS" target="_blank">
+                                <i class='icons bx bxl-github'></i>
+                            </a>
+                            <a href="https://riverbeaver.github.io/CourseWorkJS/" target="_blank">
+                                <i class="icons bx bx-link-external"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/Progects/HomeWork22task5.png" alt="Trello">
+                    <div>
+                        <div class="link-block">
+                            <a href="https://github.com/RiverBeaver/HomeWork22" target="_blank">
+                                <i class='icons bx bxl-github'></i>
+                            </a>
+                            <a href="https://riverbeaver.github.io/HomeWork22/" target="_blank">
+                                <i class="icons bx bx-link-external"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/Progects/homeWork21.png" alt="Trello">
+                    <div>
+                        <div class="link-block">
+                            <a href="https://github.com/RiverBeaver/HomeWork21" target="_blank">
+                                <i class='icons bx bxl-github'></i>
+                            </a>
+                            <a href="https://riverbeaver.github.io/HomeWork21/" target="_blank">
+                                <i class="icons bx bx-link-external"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/Progects/homeWork20.png" alt="Trello">
+                    <div>
+                        <div class="link-block">
+                            <a href="https://github.com/RiverBeaver/HomeWork20" target="_blank">
+                                <i class='icons bx bxl-github'></i>
+                            </a>
+                            <a href="https://riverbeaver.github.io/HomeWork20/" target="_blank">
+                                <i class="icons bx bx-link-external"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
                     <img src="images/Progects/slider.png" alt="Trello">
                     <div>
                         <div class="link-block">
