redact my skills and about me

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p>Hi !</p>
                 <h1>I'm Maria Badanina. <br>
                 a Front-Ent Developer</h1>
-                <small>I am 24 years old, I am a novice programmer. I graduated from BSUIR. I used to practice music (violin) and sports (handball). I am currently taking a Front-end course at the STEP IT Academy. I am interested in your course because I want to improve my programming and English skills and hope to gain some development experience.</small>
+                <small>I am 25 years old, I am a novice programmer. I graduated from BSUIR. I used to practice music (violin) and sports (handball). I am currently taking a Front-end course at the STEP IT Academy. I want to improve my programming and English skills and hope to gain some development experience.</small>
             </div>
             <div class="photo"></div>
         </section>
@@ -85,7 +85,9 @@
                 <div>
                     <h3>Technical</h3>
                     <p>HTML + CSS + SCSS<br>
-                    Git + GitHub</p>
+                    Git + GitHub<br>
+                    JS + TS<br>
+                    Angular (in the process of studying)</p>
                 </div>
                 <div>
                     <h3>Language</h3>
