--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <p>Hi !</p>
                 <h1>I'm Maria Badanina. <br>
                 a Front-Ent Developer</h1>
-                <small>I am 25 years old, I am a novice programmer. I graduated from BSUIR. I used to practice music (violin) and sports (handball). I am currently taking a Front-end course at the STEP IT Academy. I want to improve my programming and English skills and hope to gain some development experience.</small>
+                <small>I am 26 years old, I am a novice programmer. I graduated from BSUIR. I used to practice music (violin) and sports (handball). I am currently taking a Front-end course at the STEP IT Academy. I want to improve my programming and English skills and hope to gain some development experience.</small>
             </div>
             <div class="photo"></div>
         </section>
@@ -103,6 +103,32 @@
             </h2>
             <div>
                 <div class="project">
+                    <img src="images/Progects/CoinCapMarker.png" alt="Trello">
+                    <div>
+                        <div class="link-block">
+                            <a href="https://github.com/RiverBeaver/CoinCapMarker" target="_blank">
+                                <i class='icons bx bxl-github'></i>
+                            </a>
+                            <a href="https://riverbeaver.github.io/CoinCapMarker/" target="_blank">
+                                <i class="icons bx bx-link-external"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
+                    <img src="images/Progects/VideoPortal.png" alt="Trello">
+                    <div>
+                        <div class="link-block">
+                            <a href="https://github.com/RiverBeaver/VideoPortal" target="_blank">
+                                <i class='icons bx bxl-github'></i>
+                            </a>
+                            <a href="https://riverbeaver.github.io/VideoPortal/" target="_blank">
+                                <i class="icons bx bx-link-external"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project">
                     <img src="images/Progects/TaskMaster.png" alt="Trello">
                     <div>
                         <div class="link-block">
@@ -116,39 +142,13 @@
                     </div>
                 </div>
                 <div class="project">
-                    <img src="images/Progects/HomeWork22task5.png" alt="Trello">
+                    <img src="images/Progects/Homework-of-IT-STEP-Academy-courses.png" alt="Trello">
                     <div>
                         <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork22" target="_blank">
+                            <a href="https://github.com/RiverBeaver/Homework-of-IT-STEP-Academy-courses" target="_blank">
                                 <i class='icons bx bxl-github'></i>
                             </a>
-                            <a href="https://riverbeaver.github.io/HomeWork22/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/homeWork21.png" alt="Trello">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork21" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork21/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/homeWork20.png" alt="Trello">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork20" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork20/" target="_blank">
+                            <a href="https://riverbeaver.github.io/Homework-of-IT-STEP-Academy-courses/" target="_blank">
                                 <i class="icons bx bx-link-external"></i>
                             </a>
                         </div>
@@ -162,58 +162,6 @@
                                 <i class='icons bx bxl-github'></i>
                             </a>
                             <a href="https://riverbeaver.github.io/Slider/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/account-registration-form.png" alt="Trello">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork9_Task3" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork9_Task3/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/form-styles.png" alt="Trello">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork9_Task2" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork9_Task2/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/trello.png" alt="Trello">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork8_Task3" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork8_Task3/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/my-email.png" alt="My email">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork7_Task3" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork7_Task3/" target="_blank">
                                 <i class="icons bx bx-link-external"></i>
                             </a>
                         </div>
@@ -240,84 +188,6 @@
                                 <i class='icons bx bxl-github'></i>
                             </a>
                             <a href="https://riverbeaver.github.io/Laba6_Task3/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div  class="project">
-                    <img src="images/Progects/profile.png" alt="Profile">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork7_Task1" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork7_Task1/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div  class="project">
-                    <img src="images/Progects/my-site.png" alt="My site">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork5_Task3" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork5_Task3/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/syte-whith-menu.png" alt="Syte whith menu">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork6_Task2" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork6_Task2/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/marketing.png" alt="Marketing">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork6_Task3" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork6_Task3/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/products-list.png" alt="Products list">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork4_Task1" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork4_Task1/" target="_blank">
-                                <i class="icons bx bx-link-external"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="project">
-                    <img src="images/Progects/my-to-do-list.png" alt="My to do list">
-                    <div>
-                        <div class="link-block">
-                            <a href="https://github.com/RiverBeaver/HomeWork3_Task2" target="_blank">
-                                <i class='icons bx bxl-github'></i>
-                            </a>
-                            <a href="https://riverbeaver.github.io/HomeWork3_Task2/" target="_blank">
                                 <i class="icons bx bx-link-external"></i>
                             </a>
                         </div>
@@ -400,6 +270,6 @@
             </div>
         </section>
     </main> 
-    <footer><em>Maria-Badanina</em>   2023</footer>
+    <footer><em>Maria-Badanina</em>   2024</footer>
 </body>
 </html>
