--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                     <p>HTML + CSS + SCSS<br>
                     Git + GitHub<br>
                     JS + TS<br>
-                    Angular (in the process of studying)</p>
+                    Angular<br>
+                    React (in the process of studying)</p>
                 </div>
                 <div>
                     <h3>Language</h3>
